# oxbow

./: .env.sample  .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  rust-toolchain  rustfmt.toml  setup.sh
.github/workflows/: ci.yml
migrations/: V1__add_token_table.sql  V2__add_commands_table.sql  V3__add_quotes_table.sql
site/: config.toml  default.nix
site/content/: _index.md  commands.md
site/sass/: cacti.scss
site/sass/partials/: _base.scss  _layout.scss  _text.scss
site/templates/: 404.html  anchor-link.html  base.html  index.html  macros.html
src/: auth.rs  bot.rs  commands.rs  db.rs  lib.rs  main.rs  msg.rs  opts.rs  oxbow.lalrpop  parse.rs  quotes.rs  settings.rs  store.rs  wordsearch.rs
src/bot/: builder.rs  handler.rs
src/bot/handler/: obs.rs  process.rs  receive.rs  respond.rs
src/parse/: ast.rs
src/store/: commands.rs  quotes.rs  token.rs
