[package]
name = "oxbow"
version = "0.1.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.5"
surf = "2.2.0"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
twitch-irc = "2.2.0"

[dependencies.tokio]
version = "1.5"
features = ["full"]

[dependencies.twitch_api2]
version = "0.5.0-beta.2"
features = ["client", "surf_client", "helix", "tmi"]

[dependencies.twitch_oauth2_auth_flow]
git = "https://github.com/stuck-overflow/twitch_oauth2_auth_flow"
branch = "main"
