[package]
name = "oxbow"
version = "0.1.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.50"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
eyre = "0.6.5"
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rusqlite = "0.25.1"
surf = "2.2.0"
tap = "1.0.1"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
lazy_static = "1.4.0"

[dependencies.refinery]
git = "https://github.com/rust-db/refinery"
branch = "main"
features = ["rusqlite"]

[dependencies.tokio]
version = "1.5"
features = ["full"]

[dependencies.twitch_api2]
version = "0.5.0-beta.2"
features = ["client", "surf_client", "helix", "tmi"]

[dependencies.twitch-irc]
version = "2.2.0"
features = ["refreshing-token"]

[dependencies.twitch_oauth2_auth_flow]
git = "https://github.com/stuck-overflow/twitch_oauth2_auth_flow"
branch = "main"

[dev-dependencies]
tempfile = "3.2.0"
